lake script run blueprintConvert

--- a/lake-manifest.json
+++ b/lake-manifest.json
@@ -21,6 +21,16 @@
    "inputRev": "v4.24.0-rc1",
    "inherited": false,
    "configFile": "lakefile.lean"},
+  {"url": "https://github.com/hanwenzhu/blueprint-gen",
+   "type": "git",
+   "subDir": null,
+   "scope": "hanwenzhu",
+   "rev": "edf199fa3cb0a30476e5370d8385fa41c5124642",
+   "name": "«blueprint-gen»",
+   "manifestFile": "lake-manifest.json",
+   "inputRev": "main",
+   "inherited": false,
+   "configFile": "lakefile.lean"},
   {"url": "https://github.com/leanprover-community/plausible",
    "type": "git",
    "subDir": null,
@@ -100,6 +110,16 @@
    "manifestFile": "lake-manifest.json",
    "inputRev": "main",
    "inherited": true,
-   "configFile": "lakefile.toml"}],
+   "configFile": "lakefile.toml"},
+  {"url": "https://github.com/acmepjz/md4lean",
+   "type": "git",
+   "subDir": null,
+   "scope": "",
+   "rev": "66aefec2852d3e229517694e642659f316576591",
+   "name": "MD4Lean",
+   "manifestFile": "lake-manifest.json",
+   "inputRev": "main",
+   "inherited": true,
+   "configFile": "lakefile.lean"}],
  "name": "SpherePacking",
  "lakeDir": ".lake"}
