--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -41,5 +41,6 @@ jobs:
       - name: Compile blueprint and documentation
         uses: leanprover-community/docgen-action@095763bcfa35bef9c6a3eb8ae778c5e6c7727df2 # 2025-07-03
         with:
+          build-args: :blueprint
           blueprint: true
           homepage: home_page
