--- a/lakefile.toml
+++ b/lakefile.toml
@@ -8,6 +8,10 @@ relaxedAutoImplicit = false
 linter.mathlibStandardSet = true
 
 [[require]]
+name = "blueprint-gen"
+scope = "hanwenzhu"
+
+[[require]]
 name = "mathlib"
 git = "https://github.com/leanprover-community/mathlib4.git"
 rev = "v4.24.0-rc1"
